--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">2.6.0 <3.0.0"
 
 dependencies:
+  flutter_form_builder: ^3.7.2
+  fab_circular_menu: ^0.1.3
   provider: 4.0.0
   flutter:
     sdk: flutter
